--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,6 +19,7 @@
     display: grid;
     grid-template-columns: auto auto auto auto ;
     gap: 15px;
+     margin-bottom: 30px;
     list-style: none;
 }
 .copyright-text{
