--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -22,7 +22,7 @@
 .login-form input{
     width: 100%;
     height: 50px;
-    background: #333;
+    background: #9d9595;
     margin: 12px 0;
     bottom: 0;
     outline: 0 ;
